feat(api): move zone version generation to controller (ULID)
